--- a/Index.html
+++ b/Index.html
@@ -4,44 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GA Soldas e Manutenções</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="img/logo2.png" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="logo2.png" />
 </head>
 <body>
     <header>
-      <img class="logo" src="img/logo2.png">
+      <img class="logo" src="logo2.png">
       <br>
         <h1>GA Soldas e Manutenções</h1>
     </header>
     <main>
         <section class="service">
-            <img src="img/solda.jpg" alt="Serviço de Solda">
+            <img src="solda.jpg" alt="Serviço de Solda">
             <h2>Serviço de Solda</h2>
             <p>Oferecemos serviços de soldagem de alta qualidade, com técnicos certificados e experientes, utilizando equipamentos de última geração. Atendemos a diversos setores, incluindo construção civil, indústria automotiva, metalurgia e projetos personalizados. Nossos</p>
-            <button onclick="window.location.href='https://wa.me/5564992952748?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Solda%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
+            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Solda%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
         </section>
         <section class="service">
-            <img src="img/manutencao.jpg" alt="Serviço de Manutenção">
+            <img src="manutencao.jpg" alt="Serviço de Manutenção">
             <h2>Serviço de Manutenção</h2>
             <p>Oferecemos serviços de manutenção especializados para garantir a funcionalidade, eficiência e durabilidade dos seus equipamentos e instalações. Nosso objetivo é proporcionar soluções preventivas e corretivas que atendam às necessidades de nossos clientes.</p>
-            <button onclick="window.location.href='https://wa.me/5564992952748?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
+            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
         </section>
         
         <section class="service">
-            <img src="img/caldeiraria.jpg" alt="Serviço de Manutenção">
+            <img src="caldeiraria.jpg" alt="Serviço de Manutenção">
             <h2>Serviço de Caldeiraria</h2>
             <p>Oferecemos serviços de caldeiraria de alta qualidade, especializados na fabricação, montagem e manutenção de estruturas metálicas. Nosso compromisso é entregar soluções robustas e precisas que atendam às necessidades dos nossos clientes.</p>
-            <button onclick="window.location.href='https://wa.me/5564992952748?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
+            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
         </section>
         
         <section class="service">
-            <img src="img/serralheria.jpg" alt="Serviço de Manutenção">
+            <img src="serralheria.jpg" alt="Serviço de Manutenção">
             <h2>Serralheria em Geral</h2>
             <p>Oferecemos serviços de serralheria em geral, especializados na fabricação, instalação e reparo de estruturas metálicas para diversos fins. Nosso compromisso é entregar produtos de alta qualidade, personalizados para atender às suas necessidades específicas.</p>
-            <button onclick="window.location.href='https://wa.me/5564992952748?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
+            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
         </section>
         <section class="service">
-            <img src="img/logo.png" alt="Serviço de Manutenção">
+            <img src="logo.png" alt="Serviço de Manutenção">
             <h2>Portifólio</h2>
             <p>🌟Conheça o Nosso Trabalho!
 
