--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Solda%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
         </section>
         <section class="service">
-            <img src="manutencao.jpg" alt="Serviço de Manutenção">
+            <img src="manutencao1.jpg" alt="Serviço de Manutenção">
             <h2>Serviço de Manutenção</h2>
             <p>Oferecemos serviços de manutenção especializados para garantir a funcionalidade, eficiência e durabilidade dos seus equipamentos e instalações. Nosso objetivo é proporcionar soluções preventivas e corretivas que atendam às necessidades de nossos clientes.</p>
             <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
