--- a/index.html
+++ b/index.html
@@ -3,66 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GA Soldas e Manutenções</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="logo2.png" />
+    <title>Em Breve - GA SOLDAS E MANUTENÇÕES</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #F3F4F6;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+        }
+        .logo {
+            width: 230px;
+            height: 230px;
+            border-radius: 50%;
+            border: 5px solid #FFD700;
+            animation: borderColorChange 2s infinite alternate, pulse 2s infinite;
+            margin-bottom: 20px;
+        }
+        @keyframes borderColorChange {
+            0% {
+                border-color: #FFD700;
+            }
+            100% {
+                border-color: #000000;
+            }
+        }
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+        .coming-soon {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        .website {
+            font-size: 18px;
+            color: #FFD700;
+            text-decoration: none;
+        }
+        .website:hover {
+            color: #e6b800;
+        }
+        .social-icons {
+            margin-top: 20px;
+        }
+        .social-icons a {
+            color: #FFD700;
+            margin: 0 10px;
+            font-size: 24px;
+            text-decoration: none;
+        }
+        .social-icons a:hover {
+            color: #e6b800;
+        }
+    </style>
 </head>
 <body>
-    <header>
-      <img class="logo" src="logo2.png">
-      <br>
-        <h1>GA Soldas e Manutenções</h1>
-    </header>
-    <main>
-        <section class="service">
-            <img src="solda.jpg" alt="Serviço de Solda">
-            <h2>Serviço de Solda</h2>
-            <p>Oferecemos serviços de soldagem de alta qualidade, com técnicos certificados e experientes, utilizando equipamentos de última geração. Atendemos a diversos setores, incluindo construção civil, indústria automotiva, metalurgia e projetos personalizados. Nossos</p>
-            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Solda%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
-        </section>
-        <section class="service">
-            <img src="manutencao1.jpg" alt="Serviço de Manutenção">
-            <h2>Serviço de Manutenção</h2>
-            <p>Oferecemos serviços de manutenção especializados para garantir a funcionalidade, eficiência e durabilidade dos seus equipamentos e instalações. Nosso objetivo é proporcionar soluções preventivas e corretivas que atendam às necessidades de nossos clientes.</p>
-            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
-        </section>
-        <section class="service">
-            <img src="caldeiraria.jpg" alt="Serviço de Manutenção">
-            <h2>Serviço de Caldeiraria</h2>
-            <p>Oferecemos serviços de caldeiraria de alta qualidade, especializados na fabricação, montagem e manutenção de estruturas metálicas. Nosso compromisso é entregar soluções robustas e precisas que atendam às necessidades dos nossos clientes.</p>
-            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
-        </section>
-        <section class="service">
-            <img src="serralheria.jpg" alt="Serviço de Manutenção">
-            <h2>Serralheria em Geral</h2>
-            <p>Oferecemos serviços de serralheria em geral, especializados na fabricação, instalação e reparo de estruturas metálicas para diversos fins. Nosso compromisso é entregar produtos de alta qualidade, personalizados para atender às suas necessidades específicas.</p>
-            <button onclick="window.location.href='https://wa.me/5564996471930?text=Olá%2C%20gostaria%20de%20solicitar%20um%20orçamento%20para%20o%20Serviço%20de%20Manutenção%20prestado%20pela%20GA%20Soldas%20e%20Manutenções.%0A%0A%2A%2A%2AAguardando%20o%20retorno.%2A%2A%2A'">Solicitar Orçamento</button>
-        </section>
-        <section class="service">
-            <img src="logo.png" alt="Serviço de Manutenção">
-            <h2>Portifólio</h2>
-            <p>🌟Conheça o Nosso Trabalho!
-
-Na GA Soldas e Manutenções, nos orgulhamos de oferecer serviços de alta qualidade e soluções inovadoras para todas as suas necessidades. Quer saber mais sobre o que podemos fazer por você?
-<br>
-<br>
-📂Baixe Nosso Portfólio Agora Mesmo!</p>
-            <button class="link">
-              <a
-            href="https://drive.google.com/file/d/1689WbR-aQDViJYu1-PLBknu3KGZ64Prn/view?usp=drivesdk">Baixar
-            Portifólio</a>
-            </button>
-        </section>
-    </main>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <footer>
-        <p>&copy; 2024 GA Soldas e Manutenções. Todos os direitos
-        reservados.<br>
-        Powered BI AtecSeven Tecnologia</p>
-    </footer>
+    <div class="container">
+        <img src="logo.jpeg" alt="Logo GA SOLDAS E MANUTENÇÕES" class="logo">
+        <div class="coming-soon">Em breve nosso site em</div>
+        <a href="http://www.gasoldas.com" class="website">www.gasoldas.com</a>
+        <div class="social-icons">
+            <a href="https://wa.me/5564996471930?text=Oi%2C%20tudo%20bem%3F%20Gostaria%20de%20saber%20mais%20sobre%20os%20servi%C3%A7os%20de%20voc%C3%AAs%20e%20pedir%20um%20or%C3%A7amento.%20Podem%20me%20ajudar%3F%0A%0AObrigado!" target="_blank"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://www.instagram.com/g.a_soldas_manutencoes/profilecard/?igsh=emMyeHBpYnBmemZ2" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/NOME_DO_LINKEDIN" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/share/14rPXQVH1C/" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+    </div>
 </body>
 </html>
